--- a/CSS/main.css
+++ b/CSS/main.css
@@ -88,13 +88,12 @@ a {
 
 @media screen and ( min-width: 768px ) {
   .carousel-cell {
-    height: 35rem;
   }
 }
 @media screen and ( min-width: 960px ) {
   .carousel-cell {
-    width: 60%;
-    height: 50rem;
+    width: 100%;
+    height: auto;
   }
 }
 .flickity-button {
@@ -145,6 +144,20 @@ a {
 }
 /* END OF HOME*/
 
+/* START OF SPACES*/
+.Spaces{
+  padding:1rem;
+}
+.Spaces h1{
+  font-family: 'Barlow Condensed', sans-serif;
+}
+.Spaces .grid-spaces{
+  display: grid;
+  grid-template-columns:repeat(2,1fr);
+  grid-auto-rows: 100px;
+
+}
+
 /* START OF RESERVE*/
 .Reserve{
   display:flex;
@@ -166,7 +179,7 @@ a {
   color:rgb(223, 223, 223);
   transition-duration: 1200ms;
 }
-/* END OF HOME*/
+/* END OF RESERVE*/
 
 /* START OF BLOG */
 .Blog{
