--- a/CSS/main.css
+++ b/CSS/main.css
@@ -548,11 +548,11 @@ section {
 }
 
 section:nth-child(odd) {
-  background-color: #ffcc33;
+  background-color: whitesmoke;
 }
 
 section:nth-child(even) {
-  background-color: #ffb347;
+  background-color: grey;
 }
 
 section h1 {
@@ -562,7 +562,7 @@ section h1 {
   color: black;
 }
 
-.first{
+.Home{
   width: 100%;
   height: auto;
   background-image: url('../images/Main_BG.jpg');
