--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,3 +1,6 @@
+/* Google Fonts - Poppins */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
 /* Basic styling */
 * {
   box-sizing: border-box;
@@ -7,6 +10,8 @@
 body {
   font-family: sans-serif;
   font-size: 16px;
+  align-items: center;
+  justify-content: center;
 }
 
 /* START OF NAVBAR*/
@@ -51,88 +56,7 @@ a {
 }
 /*END OF NAVBAR*/
 
-.carousel-container{
-  margin-top: 3rem;
-}
-/* START OF CAROUSEL*/
-.carousel-cell {
-  width: 90%;
-  counter-increment: carousel js-flickity carousel-class img;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: auto;
-}
-.carousel-cell.is-selected {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.carousel-cell.is-selected img{
-  opacity: 1;
-}
-.carousel-cell::before{
-  display: flex;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-  content: counter(carousel js-flickity carousel-class img);
-  font-size: 80px;
-  background-color: black;
-}
-.carousel-cell img{
-  width: 100%;
-  height: auto;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  opacity: .5;
-}
 
-@media screen and ( min-width: 768px ) {
-  .carousel-cell {
-  }
-}
-@media screen and ( min-width: 960px ) {
-  .carousel-cell {
-    width: 100%;
-    height: auto;
-  }
-}
-.flickity-button {
-  background:transparent;
-}
-/* hide disabled button */
-.flickity-button:disabled {
-  display: none;
-}
-/* buttons, no circle */
-.flickity-prev-next-button {
-  width: 60px;
-  height: 60px;
-  background: transparent;
-  opacity: 0.6;
-}
-.flickity-prev-next-button:hover {
-  background: transparent;
-  opacity: 1;
-}
-/* arrow color */
-.flickity-prev-next-button .arrow {
-  fill: black;
-}
-.flickity-prev-next-button.no-svg {
-  color: white;
-}
-/* closer to edge */
-.flickity-prev-next-button.previous { left: 0; }
-.flickity-prev-next-button.next { right: 0; }
-/* hide disabled button */
-.flickity-prev-next-button:disabled {
-  display: none;
-}
-/* END OF CAROUSEL*/
 
 
 /* START OF HOME*/
@@ -568,4 +492,127 @@ section h1 {
   background-image: url('../images/Main_BG.jpg');
   background-position: center center;
   background-size: cover;
+}
+
+.slide-container{
+  max-width: 1120px;
+  width: 100%;
+  padding: 40px 0;
+}
+.slide-content{
+  margin: 0 40px;
+  overflow: hidden;
+  border-radius: 25px;
+}
+.card{
+  border-radius: 25px;
+  background-color: #FFF;
+}
+.image-content,
+.card-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 14px;
+}
+.image-content{
+  position: relative;
+  row-gap: 5px;
+  padding: 25px 0;
+}
+.overlay{
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #4070F4;
+  border-radius: 25px 25px 0 25px;
+}
+.overlay::before,
+.overlay::after{
+  content: '';
+  position: absolute;
+  right: 0;
+  bottom: -40px;
+  height: 40px;
+  width: 40px;
+  background-color: #4070F4;
+}
+.overlay::after{
+  border-radius: 0 25px 0 0;
+  background-color: #FFF;
+}
+.card-image{
+  position: relative;
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  background: #FFF;
+  padding: 3px;
+}
+.card-image .card-img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 4px solid #4070F4;
+}
+.name{
+  font-size: 18px;
+  font-weight: 500;
+  color: #333;
+}
+.description{
+  font-size: 14px;
+  color: #707070;
+  text-align: center;
+}
+.button{
+  border: none;
+  font-size: 16px;
+  color: #FFF;
+  padding: 8px 16px;
+  background-color: #4070F4;
+  border-radius: 6px;
+  margin: 14px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.button:hover{
+  background: #265DF2;
+}
+
+.swiper-navBtn{
+  color: #6E93f7;
+  transition: color 0.3s ease;
+}
+.swiper-navBtn:hover{
+  color: #4070F4;
+}
+.swiper-navBtn::before,
+.swiper-navBtn::after{
+  font-size: 35px;
+}
+.swiper-button-next{
+  right: 0;
+}
+.swiper-button-prev{
+  left: 0;
+}
+.swiper-pagination-bullet{
+  background-color: #6E93f7;
+  opacity: 1;
+}
+.swiper-pagination-bullet-active{
+  background-color: #4070F4;
+}
+
+@media screen and (max-width: 768px) {
+  .slide-content{
+    margin: 0 10px;
+  }
+  .swiper-navBtn{
+    display: none;
+  }
 }
